Update ScopedValues.java